// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div>
  <button
    class="soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show
    </span>
  </button>
  <button
    class="soui-button-primary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="soui-button-success soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="soui-button-warning soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Warn
    </span>
  </button>
  <button
    class="soui-button-danger soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <button
    class="soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Duration 10 s.
    </span>
  </button>
  <button
    class="soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top
        </span>
      </div>
      <div
        class="soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          middle
        </span>
      </div>
      <div
        class="soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-left
        </span>
      </div>
      <div
        class="soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-right
        </span>
      </div>
      <div
        class="soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-left
        </span>
      </div>
      <div
        class="soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
